--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.5.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.441.0",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
     "next": "^14.2.8",
     "next-auth": "^4.24.11",
