--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.7",
     "firebase": "^11.4.0",
     "framer-motion": "^11.5.4",
+    "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.441.0",
     "multer": "^1.4.5-lts.2",
