--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "firebase": "^11.4.0",
     "framer-motion": "^11.5.4",
