--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "firebase": "^11.4.0",
+    "formidable": "^3.5.4",
     "framer-motion": "^11.5.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.441.0",
