--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "lint": "next lint",
-      "start": "next start -H 0.0.0.0 -p 3000"
-  },
+  "dev": "next dev",
+  "build": "next build",
+  "lint": "next lint",
+  "start": "node server.js"
+}
+,
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.0",
     "@types/jsonwebtoken": "^9.0.7",
@@ -17,9 +18,11 @@
     "bootstrap": "^5.3.3",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
+    "express": "^5.1.0",
     "firebase": "^11.4.0",
     "formidable": "^3.5.4",
     "framer-motion": "^11.5.4",
+    "http-proxy-middleware": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.441.0",
     "mysql2": "^3.14.0",
