--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^11.4.0",
     "formidable": "^3.5.4",
     "framer-motion": "^11.5.4",
+    "html2pdf.js": "^0.10.3",
     "http-proxy-middleware": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.441.0",
