--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@reduxjs/toolkit": "^2.6.0",
     "@types/jsonwebtoken": "^9.0.7",
     "argon2": "^0.41.1",
-    "axios": "^1.8.4",
+    "axios": "^1.11.0",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "crypto": "^1.0.1",
@@ -25,6 +25,7 @@
     "http-proxy-middleware": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.441.0",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.0",
     "next": "^14.2.8",
     "next-auth": "^4.24.11",
